Removed console logs and improve info
